<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IntentExmp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message</string>
    <string name="content">Image</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="address">Address</string>
    <string name="CreditCard">Credit Card No</string>
    <string name="Processdata">Process</string>
    <string name="Savedata">Save Data</string>
    <string name="Close">Close</string>
    <string name="ReportData">Report Data</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Address">Address</string>
    <string name="Card_Number">Card Number</string>
    <string name="title_activity_main">SaveDataActivity</string>

</resources>
